# simple-modern-uv

./: .copierignore  CHANGELOG.md  copier.yml  pyproject.toml  pyrightconfig.json  ruff.toml
docs/: DEVELOPMENT.md  build_template.md  template-versioning.md
reference/: README.md  development.md  installation.md  prek.toml  pyproject.toml  ruff.toml  {% if license == 'MIT' %}LICENSE{% endif %}
reference/docs/: update.md
reference/src/package_module/: __init__.py  core.py  devtools.py  logging_config.py  package_module.py  settings.py
reference/tests/: test_logging.py  test_placeholder.py
scripts/: build_template.py
template/: Makefile  README.md.jinja  development.md.jinja  installation.md.jinja  prek.toml  pyproject.toml.jinja  pyrightconfig.json  ruff.toml  {% if license == 'MIT' %}LICENSE{% endif %}.jinja
template/src/{{ package_module }}/: __init__.py.jinja  devtools.py.jinja  logging_config.py  settings.py  settings.py.jinja  {{ package_module }}.py.jinja
template/src/{{ package_module }}/devtools_templates/: __init__.py.j2  module.py.j2
template/tests/: test_logging.py  test_logging.py.jinja
