[project]
name = "simple-modern-uv"
version = "0.3.0rc1"
description = "My take on a simple, modern Python package template"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Karl Wooster", email = "karl@woostertech.com" }]
dependencies = [
  "copier>=9.10.2",
]

[dependency-groups]
dev = [
  "pydantic-settings>=2.11.0",
  "pytest>=8.4.2",
  "rich>=14.1.0",
  "ruff>=0.13.2",
  "typer>=0.19.2",
]

[tool.ruff]
line-length = 100
