# ---- Project Info and Dependencies ----

[project]
name = "PackageName"
description = "short description"
readme = "README.md"
requires-python = ">=3.12,<4.0"
# if `license != 'none'`
license-files = ["LICENSE"]
# endif
authors = [
  { name = "your name", email = "your.name@example.com" },
]
# https://pypi.org/classifiers/
# Adjust as needed:
classifiers = [
  # Adjust as needed:
  "Development Status :: 4 - Beta",
  # "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  # Include this to avoid accidentally publishing to PyPI:
  "Private :: Do Not Upload",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
# ---- Main dependencies ----
dependencies = [
  "pydantic-settings>=2.11.0",
  "rich>=14.0.0",
  "typer>=0.24.1",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/my-github-org/PackageName"
# Homepage = "https://..."
# Documentation = "https://..."

[project.scripts]
# Add script entry points here:
PackageName = "package_module.package_module:cli"

# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[dependency-groups]
dev = [
  "basedpyright>=1.31.0",
  "codespell>=2.4.1",
  "deptry>=0.23.0",
  "ipython>=9.8.0",
  "jinja2>=3.1.6",
  "prek>=0.4.3",
  "pydantic>=2.11.9",
  "pytest>=8.3.5",
  "pytest-sugar>=1.0.0",
  "rich>=14.0.0",
  "ruff>=0.11.9",
]
docs = [
  "zensical>=0.0.43",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.codespell]
# Add here as needed:
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

# ---- Dev dependencies ----
[tool.deptry]
extend_exclude = ["src/package_module/devtools\\.py"]

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["src/package_module"]

# ---- Settings ----

[tool.pytest]
filterwarnings = []
norecursedirs = []
python_classes = ["Test*"]
python_files = ["*.py"]
python_functions = ["test_*"]
testpaths = [
  "src",
  "tests",
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
